--- a/.github/workflows/test-blue_sentinel.yml
+++ b/.github/workflows/test-blue_sentinel.yml
@@ -21,15 +21,15 @@ jobs:
           }
           mkdir -p ~/.local/share/nvim/site/pack/vendor/start
           if [ "$GITHUB_EVENT_NAME" = "pull_request" ]; then
-            git clone --depth 1 https://github.com/jbyuki/instant.nvim ~/.local/share/nvim/site/pack/vendor/start/instant.nvim
-            cd ~/.local/share/nvim/site/pack/vendor/start/instant.nvim
+            git clone --depth 1 https://github.com/letsbreelhere/blue-sentinel-nvim ~/.local/share/nvim/site/pack/vendor/start/blue-sentinel-nvim
+            cd ~/.local/share/nvim/site/pack/vendor/start/blue-sentinel-nvim
             # https://github.com/actions/checkout/issues/58
             PR_NUMBER=$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }')
             git fetch origin pull/${PR_NUMBER}/head:pr-branch
             git checkout pr-branch
             cd
           else
-            git clone --depth 1 https://github.com/jbyuki/instant.nvim ~/.local/share/nvim/site/pack/vendor/start/instant.nvim
+            git clone --depth 1 https://github.com/letsbreelhere/blue-sentinel-nvim ~/.local/share/nvim/site/pack/vendor/start/blue-sentinel-nvim
           fi
       - run: echo "Neovim has been installed."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
